fix: the alignment issue with the header is complete

--- a/airbnb/src/index.css
+++ b/airbnb/src/index.css
@@ -4,6 +4,7 @@
 
     box-sizing: border-box;
     font-family: 'Airbnb Cereal VF';
+    scrollbar-width: none;
 }
 
 .header-bg {
